// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddressDetails Component renders component correctly 1`] = `
<div>
  <form
    action="/api/form-handler"
    aria-label="form"
    class="pt-6 md:pt-8 md:max-w-2xl"
    method="POST"
    novalidate=""
  >
    <input
      name="locale"
      type="hidden"
    />
    <input
      name="currentStep"
      type="hidden"
      value="step-0"
    />
    <input
      name="nextStep"
      type="hidden"
      value="address-confirmation"
    />
    <div
      class="pb-6 md:pb-8"
    >
      <div
        class="flex flex-col gap-8"
      >
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="addressLine1"
          >
            components.address-details.form.address-line-1.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-addressLine1"
            id="addressLine1"
            name="addressLine1"
            type="text"
            value=""
          />
        </div>
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="addressLine2"
          >
            components.address-details.form.address-line-2.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-addressLine2"
            id="addressLine2"
            name="addressLine2"
            type="text"
            value=""
          />
        </div>
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="city"
          >
            components.address-details.form.city.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-city"
            id="city"
            name="city"
            type="text"
            value=""
          />
        </div>
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="county"
          >
            components.address-details.form.county.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-county"
            id="county"
            name="county"
            type="text"
            value=""
          />
        </div>
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="postcode"
          >
            components.address-details.form.postcode.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-postcode"
            id="postcode"
            name="postcode"
            type="text"
            value=""
          />
        </div>
        <div
          class="text-base"
        >
          <label
            class="block text-2xl"
            for="country"
          >
            components.address-details.form.country.label
          </label>
          <input
            aria-invalid="false"
            class="obfuscate px-3 m-px mt-2 w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-country"
            id="country"
            name="country"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
      data-testid="form-button"
      type="submit"
    >
      <span />
      common.form.button.continue-text
      <span />
    </button>
  </form>
</div>
`;

exports[`AddressDetails Component renders component correctly with errors 1`] = `
<div>
  <form
    action="/api/form-handler"
    aria-label="form"
    class="pt-6 md:pt-8 md:max-w-2xl"
    method="POST"
    novalidate=""
  >
    <input
      name="locale"
      type="hidden"
    />
    <input
      name="currentStep"
      type="hidden"
      value="step-0"
    />
    <input
      name="nextStep"
      type="hidden"
      value="address-confirmation"
    />
    <div
      class="pb-6 md:pb-8"
    >
      <div
        class="flex flex-col gap-8"
      >
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="addressLine1"
            >
              components.address-details.form.address-line-1.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="addressLine1-error"
              id="addressLine1-error"
            >
              components.address-details.form.address-line-1.error
            </p>
            <input
              aria-describedby="addressLine1-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-addressLine1"
              id="addressLine1"
              name="addressLine1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="addressLine2"
            >
              components.address-details.form.address-line-2.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="addressLine2-error"
              id="addressLine2-error"
            >
              components.address-details.form.address-line-2.error
            </p>
            <input
              aria-describedby="addressLine2-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-addressLine2"
              id="addressLine2"
              name="addressLine2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="city"
            >
              components.address-details.form.city.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="city-error"
              id="city-error"
            >
              components.address-details.form.city.error
            </p>
            <input
              aria-describedby="city-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-city"
              id="city"
              name="city"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="county"
            >
              components.address-details.form.county.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="county-error"
              id="county-error"
            >
              components.address-details.form.county.error
            </p>
            <input
              aria-describedby="county-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-county"
              id="county"
              name="county"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="postcode"
            >
              components.address-details.form.postcode.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="postcode-error"
              id="postcode-error"
            >
              components.address-details.form.postcode.error
            </p>
            <input
              aria-describedby="postcode-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-postcode"
              id="postcode"
              name="postcode"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <div
            class="text-base"
          >
            <label
              class="block text-2xl"
              for="country"
            >
              components.address-details.form.country.label
            </label>
            <p
              class="break-words mb-0 text-red-700"
              data-testid="country-error"
              id="country-error"
            >
              components.address-details.form.country.error
            </p>
            <input
              aria-describedby="country-error"
              aria-invalid="true"
              class="obfuscate px-3 m-px mt-2 w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
              data-testid="input-country"
              id="country"
              name="country"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
      data-testid="form-button"
      type="submit"
    >
      <span />
      common.form.button.continue-text
      <span />
    </button>
  </form>
</div>
`;
